# agentic-rag-portfolio

./: .env.example  .gitignore  README.md  pytest.ini  ruff.toml  verify_ig.py
.github/workflows/: deploy.yml
app1-webscout/: Dockerfile  README.md  cloudbuild.yaml  requirements.txt
app1-webscout/src/: __init__.py  agent.py  logger.py  main.py  models.py  tools.py
app1-webscout/tests/: conftest.py  test_agent.py  test_tools.py
app2-documind/: Dockerfile  README.md  cloudbuild.yaml  requirements.txt
app2-documind/src/: __init__.py  domains.py  logger.py  main.py  models.py  rag_pipeline.py  vectorstore.py
app2-documind/tests/: conftest.py  test_pipeline.py  test_vectorstore.py
ig-market-data-project/agentic-finance/: narrative.md  pyproject.toml
ig-market-data-project/hft-engine/: narrative.md  pyproject.toml
ig-market-data-project/market-data/: narrative.md  pyproject.toml
ig-market-data-project/market-data/docs/: market-data-architecture.md
ig-market-data-project/market-data/src/ig_market_data/: __init__.py  client.py  config.py  run_analysis.py  stream.py  verify_ig.py
ig-market-data-project/ml-for-finance/: narrative.md  pyproject.toml
ig-market-data-project/quant-methods/: narrative.md  pyproject.toml
ig-market-data-project/quant-methods/src/quant_methods/: run_analysis.py
ig-market-data-project/quant-methods/src/quant_methods/pricers/: __init__.py  black_scholes.py
ig-market-data-project/quant-methods/tests/: test_black_scholes.py
