[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agentic-finance"
version = "0.1.0"
description = "Agentic trading systems powered by LLMs and reinforcement learning"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "openai>=1.30",
    "ig-market-data",
    "quant-methods",
    "ml-for-finance",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
]
