[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ig-market-data"
version = "0.1.0"
description = "IG REST API client, PostgreSQL schema, and data ingestion engine"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py310"
